--- a/src/components/CourseTimelineCard/index.css
+++ b/src/components/CourseTimelineCard/index.css
@@ -13,15 +13,6 @@
   justify-content: space-between;
   align-items: center;
 }
-
-.skills-bg {
-  background-color: #94bcea;
-  flex-shrink: 1;
-  flex-shrink: inherit;
-  margin: 5px;
-  border-radius: 10px;
-  padding: 5px;
-}
 .skills-container {
   list-style-type: none;
   padding-left: 0px;
@@ -29,4 +20,28 @@
   flex-direction: row;
   overflow: auto;
   flex-wrap: wrap;
+}
+
+.skills-bg {
+  background-color: #c9d0e7;
+  flex-shrink: 1;
+  flex-shrink: inherit;
+  margin: 5px;
+  border-radius: 5px;
+  padding: 0px;
+
+  box-sizing: border-box;
+  padding-left: 4px;
+  padding-right: 4px;
+}
+.skills-head {
+  font-family: roboto;
+  font-weight: 500;
+  font-size: 14px;
+  margin: 4px;
+}
+.hours-style {
+  margin-left: 5px;
+  font-family: roboto;
+  font-weight: 500;
 }
