--- a/src/components/TimelineView/index.css
+++ b/src/components/TimelineView/index.css
@@ -1,10 +1,22 @@
+* {
+  box-sizing: border-box;
+}
+.title-bg-container {
+  margin: 10px;
+}
 .main-bg-container {
   padding-left: 40px;
   padding-right: 40px;
+  margin: 10px;
 }
 .main-head {
   text-align: center;
   font-size: 22px;
   font-family: Roboto;
   color: #171f46;
+}
+.main-bg-container2 {
+  width: 100%;
+  height: 95vh;
+  padding-bottom: 26px;
 }
